Fix align-items in VerticalGapLayout.

--- a/js/src/setup-mc/setup-stepper/setup-free-listings/components/vertical-gap-layout/index.scss
+++ b/js/src/setup-mc/setup-stepper/setup-free-listings/components/vertical-gap-layout/index.scss
@@ -1,5 +1,6 @@
 .gla-vertical-gap-layout {
 	display: flex;
+	align-items: flex-start;
 	flex-direction: column;
 	gap: calc(var(--main-gap) / 2);
 
